--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -21,11 +21,13 @@
                     <div id="form-container">
                         <div class="form-group">
                             <div id="name">Username</div>
-                            <input 
+                            <!-- <input 
                                 id="username" 
                                 type="text" 
                                 class="form-control"
-                                ></div>
+                                > -->
+                            <app-input></app-input>
+                            </div>
                         
                         <div class="form-group">
                             <div id="pass">Password</div>
