--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-dropdown [states]="stateList" [dropConfig]="textDropConfig"></app-dropdown>
