--- a/CHL-Frontend/src/app/common/button/button.component.scss
+++ b/CHL-Frontend/src/app/common/button/button.component.scss
@@ -8,11 +8,11 @@ button{
       gap: 10px;
 
       width: 100%;
-      background: #1CB5BD;
-      color: #fff;
+      // background: #1CB5BD;
+      // color: #fff;
       font-size: 28px;
-      border-color: #1CB5BD;
+      // border-color: #1CB5BD;
       height: 40px;
-      border: 1px solid #1CB5BD;
+      // border: 1px solid #1CB5BD;
       border-radius: 4px;
 }
