--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -69,7 +69,7 @@
     border: #1A1A1A soild ;
 }
 
-.form-container{
+#form-container{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -79,8 +79,9 @@
 .form-group{
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 form{
