input component config object created. Devs can now pass in stylings, pattern error messages

--- a/CHL-Frontend/src/app/common/input/input.component.scss
+++ b/CHL-Frontend/src/app/common/input/input.component.scss
@@ -47,31 +47,16 @@
 //   color: #6B6060;
 // }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.ipField{
+.ipField {
   width: 100%;
 
-  .errors{
-    font-family: 'Montserrat';
+  .errors {
+    font-family: "Montserrat";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
-    color: #EE0004;
+    color: #ee0004;
   }
 }
 
@@ -80,31 +65,37 @@ input {
   background: #ffffff;
   border: 1px solid #949494;
   border-radius: 10px;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.85);
 }
 
-input:hover{
+input:hover {
   border: 1px solid #737373;
 }
 
-input:focus{
-  border: 1px solid #1CB5BD;
+input:focus {
+  border: 1px solid #1cb5bd;
   outline: none;
 }
 
-input.ng-touched.ng-invalid{
-  border: 1px solid #EE0004;
+input.ng-touched.ng-invalid {
+  border: 1px solid #ee0004;
 }
 
-label{
-
-  font-family: 'Poppins';
+label {
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-/* identical to box height */
+  /* identical to box height */
 
   letter-spacing: 0.1em;
 
-  color: #6B6060;
+  color: #6b6060;
 }
