--- a/CHL-Frontend/src/app/components/patient/medication/medication.component.html
+++ b/CHL-Frontend/src/app/components/patient/medication/medication.component.html
@@ -3,84 +3,71 @@
     <div id="parent-container">
         <div id="sub-container">
             <div id="text1"><a href="#" ></a>Back to Dashboard</div>
-            <div id="text2">Update Details</div>
-            <div id="container">
-                <form>
-                <div id="container1">
-                    <div id="sub-container1">
-                        <div class="form-group">
-                            <label for="first name">Height</label>
-                            <input 
-                                id="first name" 
-                                type="text" 
-                                class="form-control"
-                                >
-                        </div>
-                        <div class="form-group">
-                            <label for="email">BMI</label>
-                            <input 
-                                id="email" 
-                                type="text" 
-                                class="form-control"
-                                >
-                        </div>
-                        <div class="form-group">
-                            <label for="gender">Immunization</label>
-                            <input 
-                                id="gender" 
-                                type="text" 
-                                class="form-control"
-                                >
-                        </div>
-                        <div class="form-group">
-                            <label for="gender">Family medical history</label>
-                            <input 
-                                id="gender" 
-                                type="text" 
-                                class="form-control"
-                                >
-                        </div>
-                    </div>
-                    <div id="sub-container2">
-                        <div class="form-group">
-                            <label for="Last name">Weight</label>
-                            <input 
-                                id="last name" 
-                                type="text" 
-                                class="form-control"
-                                >
-                        </div>
-                        <div class="form-group">
-                            <label for="contactno">Allergies</label>
-                            <input 
-                                id="contactno" 
-                                type="text" 
-                                class="form-control"
-                               >
-                        </div>
-                        <div class="form-group">
-                            <label for="contactno">Blood Group</label>
-                            <input 
-                                id="age" 
-                                type="text" 
-                                class="form-control"
-                               >
-                        </div>
-                        <div class="form-group">
-                            <label for="contactno">Chronic health problem</label>
-                            <input 
-                                id="healthprb" 
-                                type="text" 
-                                class="form-control"
-                               >
-                        </div>
-                    </div>
+            <div id="update-btn"><app-button  class="sub-btn" [btntext]="'Add'" [btnConfig]="textBtnConfig"></app-button></div>
+            <div id="text2">Current Medication</div>
+            <div id="container1"><table>
+                <h2>Current Medication</h2>
+                  <tr bgcolor="#F5F5F5">
+                    <th>Medicine</th>
+                    <th>Dosage</th>
+                    <th>Date</th>
+                    <th>Record ID</th>
+                    <th>Action</th>
+                 
+                  </tr>
+                  <tr>
+                    <td>Albendazol</td>
+                    <td>0-0-1</td>
+                    <td>21-Jul-2022</td>
+                    <td>223183</td>
+                    <td><app-button  [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button></td>
+                  </tr>
+                  <tr>
+                    <td>HCQS 200</td>
+                    <td>0-1-0</td>
+                    <td>21-Jul2022</td>
+                    <td>456378</td>
+                    <td><app-button  [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button></td>
+                  </tr>
+                  <tr>
+                    <td>Pioz 15</td>
+                    <td>0-0-1</td>
+                    <td>21-Jul-2022</td>
+                    <td>568929</td>
+                    <td><app-button  [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button></td>
+                  </tr>
+                  
+                </table></div>
+            <div id="container2">
+                <table>
+                    <h2>Past Medication</h2>
+                      <tr bgcolor="#F5F5F5">
+                        <th>Medicine</th>
+                        <th>Dosage</th>
+                        <th>Date</th>
+                        <th>Record ID</th>
+                      </tr>
+                      <tr>
+                        <td>Albendazol</td>
+                        <td>0-0-1</td>
+                        <td>21-Jul-2022</td>
+                        <td>223183</td>
+                      </tr>
+                      <tr>
+                        <td>HCQS 200</td>
+                        <td>0-1-0</td>
+                        <td>21-Jul2022</td>
+                        <td>456378</td>
+                      </tr>
+                      <tr>
+                        <td>Pioz 15</td>
+                        <td>0-0-1</td>
+                        <td>21-Jul-2022</td>
+                        <td>568929</td>
+                      </tr>
+                    </table>
                 </div>
-                <div id="container2">
-                    <!-- <div id="update-btn"><app-button  class="sub-btn" [btntext]="'UPDATE'" [btnConfig]="textBtnConfig"></app-button></div> -->
-                </div>
-                </form>
-            </div>
+                
         </div>
     </div>
 </div>  
