--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <router-outlet></router-outlet> -->
 <div>
+
 <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
-<app-sidebar></app-sidebar>
+<app-sidebar [menus]="menus"></app-sidebar>
 </div>
