--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
@@ -15,26 +15,35 @@
 .sidebar-ul{
     width: 100%;
     height: 60px;
-    padding-left: 15px;
-    margin: 0;
+    padding-left: 20px;
 }
+ul:hover, ul:active, ul:focus::after {
+        background-color: #DAFDFF;
+        color:#1CB5BD ;
+        border-right: 4px solid #1CB5BD;
+        
+      }
+
 
 #sidebar-icons{
     color: #737373;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 ul {
-    display: inline-flex;
+    display:flex;
     flex-direction: row;
     justify-content: space-between;
-    // align-items: center;
+    width: 90%;
+    border-radius: 5px;
+    margin-left: 20px;
+    padding-top: 15px;
 }
 
 .tab {
     color: #737373;
     background-color: #ffffff;
     position: relative;
-    padding: 0;
-    margin: 0;
+
 
     li {
         list-style: none;
