--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -1,5 +1,5 @@
 
-  <button type="button" class="btn btn-outline-info" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
+  <button [type]="btnConfig.type" class="btn" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
    <b> {{btntext}}</b>
   </button>
 
@@ -11,6 +11,7 @@
 
 <!-- textBtnConfig = {
   textBtnConfig = {
+    type:"submit",
     styles: {
        background: '#fff',
        color: '#1CB5BD',
