--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -1,1 +1,3 @@
-<p>past-records works!</p>
+<div class="main-component">
+    <app-navbar [name]="'Dr. Abhijit'" [button]="false"></app-navbar>
+</div>
