--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -21,12 +21,12 @@
                     <div id="form-container">
                         <div class="form-group">
                             <div id="name">Username</div> 
-                            <app-input [inputType]="type" [inputLabel]="label" [validations]="parentValidations" (outputEmit)="onClickEventReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
                             </div>
                         
                         <div class="form-group">
                             <div id="pass">Password</div>
-                            <app-input [inputType]="type2" [inputLabel]="label2" [validations]="parentValidations2" (outputEmit)="onClickEventReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig2" (outputEmit)="onClickEventReceived($event)"></app-input>
                         </div>
                     </div>
                     <div id="login-btn">
