past record table added

--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -1,3 +1,69 @@
-<div class="main-component">
+<div class="main-container">
     <app-navbar [name]="'Dr. Abhijit'" [button]="false"></app-navbar>
+    <div class="parent-container">
+        <div class="sub-container">
+            <div id="text1"><a href="#" ></a>&lt; &nbsp; Back to Dashboard</div>
+            <div class="sub-container-2">
+                <table>
+                    <tr>
+                      <th>Date</th>
+                      <th>Doctor name</th>
+                      <th>Diagnosis</th>
+                      <th>Severity</th>
+                      <th>Prescription</th>
+                    </tr>
+                    <tr>
+                      <td>10/12/22</td>
+                      <td>Dr. Rogit Patel</td>
+                      <td>Fever</td>
+                      <td>3</td>
+                      <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                    </tr>
+                    <tr>
+                        <td>10/12/22</td>
+                        <td>Dr. Rogit Patel</td>
+                        <td>Fever</td>
+                        <td>3</td>
+                        <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                      </tr>
+                      <tr>
+                        <td>10/12/22</td>
+                        <td>Dr. Rogit Patel</td>
+                        <td>Fever</td>
+                        <td>3</td>
+                        <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                      </tr>
+                      <tr>
+                        <td>10/12/22</td>
+                        <td>Dr. Rogit Patel</td>
+                        <td>Fever</td>
+                        <td>3</td>
+                        <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                      </tr>
+                      <tr>
+                        <td>10/12/22</td>
+                        <td>Dr. Rogit Patel</td>
+                        <td>Fever</td>
+                        <td>3</td>
+                        <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                      </tr>
+                      <tr>
+                        <td>10/12/22</td>
+                        <td>Dr. Rogit Patel</td>
+                        <td>Fever</td>
+                        <td>3</td>
+                        <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                      </tr>
+                      <tr>
+                        <td>10/12/22</td>
+                        <td>Dr. Rogit Patel</td>
+                        <td>Fever</td>
+                        <td>3</td>
+                        <td><app-button [btntext]="'View'" [btnConfig]="textBtnConfig" ></app-button></td>
+                      </tr>
+                      
+                  </table>
+            </div>
+        </div>
+    </div>
 </div>
