--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!-- <router-outlet></router-outlet> -->
 <div>
-
-<app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
+<div class="main-container">
+<app-navbar [button]="false" [name]="'DR Akansha Gaonkar'"></app-navbar>
+<div class="subcontainer">
 <app-sidebar [menus]="menus"></app-sidebar>
+</div>
+</div>
 </div>
