--- a/CHL-Frontend/src/app/app.component.scss
+++ b/CHL-Frontend/src/app/app.component.scss
@@ -1,3 +1,11 @@
-div{
+.main-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
     background-color: #F5FEFF;
+}
+
+.subcontainer{
+    width: 100%;
+    height: 93%;
 }
