--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
@@ -1,18 +1,17 @@
 <div class="sidebar">
-    <ul id="profile" tabindex="1">
-        <div *ngFor="let menu of menus | keyvalue">
-            <li id="sidebar-element" routerLink={{menu.value[1]}}> 
-                <img id="sidebar-icon" *ngIf="menu.value[0]==='Dashboard'" src="assets/images/Dashboard-icon.svg" width="25" height="25" >
-                <img id="sidebar-icon" *ngIf="menu.value[0]!='Dashboard'" src="assets/images/Sidebar-icons.svg" width="25" height="25">
-                {{menu.value[0]}}
-            </li>
-        </div>
-    </ul>
+    <div class="tab" *ngFor="let menu of menus | keyvalue" id="sidebar-element" routerLink={{menu.value[1]}}>
+        <img id="sidebar-icon" *ngIf="menu.value[0]==='Dashboard'" src="assets/images/Dashboard-icon.svg" width="25"
+            height="25">
+        <img id="sidebar-icon" *ngIf="menu.value[0]!='Dashboard'" src="assets/images/Sidebar-icons.svg" width="25"
+            height="25">
+        {{menu.value[0]}}
     </div>
+    
+</div>
 
 
 <!-- in parent.component.ts file -->
-    <!-- sidebar-tabs={'1':["Dashboard","/patient-dashboard"],'2':["Patient Details","/patient-details"],'3':["Past Records","/past-records"]}; -->
+<!-- sidebar-tabs={'1':["Dashboard","/patient-dashboard"],'2':["Patient Details","/patient-details"],'3':["Past Records","/past-records"]}; -->
 
-    <!-- in parent/html -->
-    <!-- <app-sidebar [sidebar-tabs]="menus"></app-sidebar> -->
+<!-- in parent/html -->
+<!-- <app-sidebar [sidebar-tabs]="menus"></app-sidebar> -->
