--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
@@ -13,46 +13,26 @@
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.16);
 }
 
-#profile {
+.tab {
+    list-style: none;
+    width: 100%;
+    height: 60px;
+    padding-left: 60px;
+    padding-top: 15px;
+    margin-bottom: 20px;
     cursor: pointer;
     color: #737373;
     background-color: #ffffff;
-    position: relative;
-
-    li {
-        list-style: none;
-        width: 100%;
-        height: 60px;
-        // padding-left: 20px;
-        border-radius: 5px;
-        margin-left: 20px;
-        padding-top: 15px;
-    }
-
 }
 
-// #profile:hover,
-// #profile:focus {
-//     background-color: #DAFDFF;
-//     color: #1CB5BD;
-//     border-right: 2px solid #1CB5BD;
-// }
 
-li:hover,li:focus {
+.tab:hover,.tab:focus,.tab:active {
     background-color: #DAFDFF;
     color: #1CB5BD;
-    border-right: 2px solid #1CB5BD;
+    border-right: 4px solid #1CB5BD;
 }
 
-ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    cursor: pointer;
-    // text-align: center;
-    // align-items: center;
-}
+
 
 // #sidebar-icons{
 //     color: #737373;
