--- a/CHL-Frontend/src/app/components/past-records/past-records.component.scss
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.scss
@@ -1,28 +1,71 @@
 .main-container {
     width: 100vw;
     height: 100vh;
+
+    #nav-bar {
+        height: 7%;
+    }
+
+    .parent-container {
+        background-color: #f5feff;
+        height: 93%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        .sub-container {
+            background-color: #ffff;
+            box-shadow: -1px 2px 5px 4px rgba(115, 115, 115, 0.29);
+            border-radius: 6px;
+            width: 85%;
+            height: 90%;
+
+            .search-filter {
+                display: flex;
+                justify-content: space-between;
+                margin: 20px;
+
+                .left {
+                    display: flex;
+                    justify-content: space-between;
+
+                    #sort-by {
+                        width: 84px;
+                        height: 30px;
+
+                        font-family: 'Poppins';
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 20px;
+                        line-height: 30px;
+                        letter-spacing: 0.1em;
+                        color: rgba(0, 0, 0, 0.85);
+                    }
+
+                    
+                }
+
+                .right {
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
+
+            .sub-container-2 {
+                position: relative;
+                margin: 20px;
+            }
+        }
+
+    }
 }
 
-#nav-bar {
-    height: 7%;
-}
 
-.parent-container {
-    background-color: #f5feff;
-    height: 93%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 
-.sub-container {
-    background-color: #ffff;
-    box-shadow: -1px 2px 5px 4px rgba(115, 115, 115, 0.29);
-    border-radius: 6px;
-    width: 85%;
-    height: 90%;
-}
+
+
+
 
 #text1 {
     font-family: "Montserrat";
@@ -33,11 +76,6 @@
     color: #737373;
     padding-top: 20px;
     padding-left: 20px;
-}
-
-.sub-container-2 {
-    position: relative;
-    margin: 20px;
 }
 
 table {
