--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
 
 
 <!-- in parent.component.ts file -->
-<!-- sidebar-tabs={'1':["Dashboard","/patient-dashboard"],'2':["Patient Details","/patient-details"],'3':["Past Records","/past-records"]}; -->
+<!-- tabs={'1':["Dashboard","/patient-dashboard"],'2':["Patient Details","/patient-details"],'3':["Past Records","/past-records"]}; -->
 
 <!-- in parent/html -->
-<!-- <app-sidebar [sidebar-tabs]="menus"></app-sidebar> -->
+<!-- <app-sidebar [menus]="tabs"></app-sidebar> -->
