dynamic placeholder added

--- a/CHL-Frontend/src/app/common/input/input.component.html
+++ b/CHL-Frontend/src/app/common/input/input.component.html
@@ -33,6 +33,7 @@
       [(ngModel)]="userInput"
       #inputField="ngModel"
       [type]="ipConfig.type"
+      [placeholder]="ipConfig.placeholder"
       [pattern]="ipConfig.validations.pattern"
       [minlength]="ipConfig.validations.minLength"
       [maxlength]="ipConfig.validations.maxLength"
