--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -9,8 +9,11 @@
                     <div style="margin-right: 10px;">
                         <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
                     </div>
+                    <div style="margin-right: 10px;">
+                        <app-input [ipConfig]="ipConfig2" (outputEmit)="onClickEventReceived($event)"></app-input>
+                    </div>
                     <div>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
+                      <app-button [btntext]="'Search'" [btnConfig]="textBtnConfig3" ></app-button>
                     </div>
                 </div>
                 <div class="right">
