--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<!-- <div class="main-container">
     <app-navbar [name]="'Dr. Abhijit'" [button]="false"></app-navbar>
     <div class="parent-container">
         <div class="sub-container">
@@ -85,4 +85,16 @@
             </div>
         </div>
     </div>
+</div> -->
+
+<div class="main-container">
+  <app-navbar [button]="false" [name]="'Dr Akansha Gaonkar'"></app-navbar>
+  <div class="subcontainer">
+    <div class="flex-item1">
+      <app-sidebar [menus]="menus"></app-sidebar>
+    </div>
+    <div class="flex-item2">
+      <p id="heading"><b>Dashboard</b></p>
+    </div>
+  </div>
 </div>
