--- a/CHL-Frontend/src/app/components/patient/medication/medication.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medication/medication.component.scss
@@ -31,6 +31,13 @@
     align-items: center;
 }
 
+#side-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    // align-items: center;
+}
+
 // #container3{
 //     display: flex;
 //     flex-direction: row-reverse;
