--- a/CHL-Frontend/src/app/components/patient/medication/medication.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medication/medication.component.scss
@@ -32,10 +32,19 @@
 }
 
 #side-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: left;
     // align-items: center;
+    position: relative;
+    width: 76%;
+    height: 85%;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    position: absolute;
+    left: 409px;
+    top: 110px;
+    background: #FFFFFF;
 }
 
 // #container3{
