--- a/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
@@ -10,9 +10,30 @@
                 <div id="reg-heading">Register Account</div>
                 <div class="select-user">
                     <p>Select the User Type</p>
-                    <div id="buttons"><app-button [btntext]="'Patient'" [btnConfig]="btnstyle" (onClick)="addPatient($event)"></app-button>
-                    <app-button [btntext]="'Doctor'" [btnConfig]="btnstyle" (onClick)="addDoctor($event)"></app-button>
+                    <div id="buttons"><button class="btn" (click)="addPatient($event)" >Patient</button>
+                    <button  class="btn" (click)="addDoctor($event)">Doctor</button>
                     </div>
                 </div>    
+                <form *ngIf="patientActive==true">
+                    <div class="form-group"></div>
+                        <div id="name">First Name</div> 
+                        <!-- <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
+                        </div>
+                        <div id="name">Last Name</div> 
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
+                        </div>
+                    
+                    <div class="form-group">
+                        <div id="pass">Password</div>
+                        <app-input [ipConfig]="ipConfig2" (outputEmit)="onClickEventReceived($event)"></app-input>
+                    </div>
+                </div> -->
+                <div id="login-btn">
+                <app-button  [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button></div>
+                </form>
+                <form *ngIf="patientActive==false">
+                    doc
+                </form>
+
         </div>
     </div>
