--- a/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
@@ -10,8 +10,8 @@
                 <div id="reg-heading">Register Account</div>
                 <div class="select-user">
                     <p>Select the User Type</p>
-                    <div id="buttons"><button class="btn" (click)="addPatient($event)" >Patient</button>
-                    <button  class="btn" (click)="addDoctor($event)">Doctor</button>
+                    <div id="buttons"><button (click)="addPatient($event)" >Patient</button>
+                    <button (click)="addDoctor($event)">Doctor</button>
                     </div>
                 </div>    
                 <form *ngIf="patientActive==true">
@@ -32,7 +32,9 @@
                 <app-button  [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button></div>
                 </form>
                 <form *ngIf="patientActive==false">
-                    doc
+                    <div id="name">Doctor Name</div> 
+                <div id="login-btn">
+                    <app-button  [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button></div>
                 </form>
 
         </div>
