--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -87,14 +87,28 @@
     </div>
 </div> -->
 
-<div class="main-container">
-  <app-navbar [button]="false" [name]="'Dr Akansha Gaonkar'"></app-navbar>
-  <div class="subcontainer">
-    <div class="flex-item1">
-      <app-sidebar [menus]="menus"></app-sidebar>
-    </div>
-    <div class="flex-item2">
-      <p id="heading"><b>Dashboard</b></p>
-    </div>
+<div>
+
+  <div class="main-container">
+
+      <app-navbar [button]="false" [name]="'Dr Akansha Gaonkar'"></app-navbar>
+
+      <div class="subcontainer">
+
+          <div class="flex-item1">
+
+              <app-sidebar [menus]="menus"></app-sidebar>
+
+          </div>
+
+          <div class="flex-item2" >
+
+              <p id="heading"><b>Dashboard</b></p>
+
+          </div>
+
+      </div>
+
   </div>
+
 </div>
