tashmeet's basic design applied

--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="main-container">
+<div class="main-container">
     <app-navbar [name]="'Dr. Abhijit'" [button]="false"></app-navbar>
     <div class="parent-container">
         <div class="sub-container">
@@ -85,9 +85,9 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
 
-<div>
+<!-- <div>
 
   <div class="main-container">
 
@@ -111,4 +111,4 @@
 
   </div>
 
-</div>
+</div> -->
